# sd-databackup

./: .gitignore  CMakeLists.txt  README.md  remove_comments.py  tasks.md
gui/: README.md  main.py  sd_backup.spec
script/: build.sh
src/: CMakeLists.txt  test_filetree.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/backup/: BackupManager.cpp  BackupManager.h  BackupMetadata.cpp  BackupMetadata.h
src/core/compression/: Compression.cpp  Compression.h  Huffman.cpp  Huffman.h  LZ77.cpp  LZ77.h
src/core/encryption/: AES.cpp  AES.h  Encryption.cpp  Encryption.h  MD5.cpp  MD5.h  NoneEncryption.cpp  NoneEncryption.h
src/core/filesystem/: FileNode.cpp  FileNode.h  FileScanner.cpp  FileScanner.h  FileTree.cpp  FileTree.h  FileTreeDiff.cpp  FileTreeDiff.h
src/core/packaging/: Packaging.cpp  Packaging.h
src/core/util/: TimeUtils.cpp  TimeUtils.h
tests/: BackupManagerTest.cpp  CMakeLists.txt  CompressionTest.cpp  EncryptionTest.cpp  ExtraTests.cpp  FileNodeTest.cpp  FileTreeDiffTest.cpp  FileTreeTest.cpp
